force-app/main/default/objects/smagicinteract__SMS_Magic_Package_Type__c/fields/smagicinteract__Package3__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Package3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Package3</label>
    <type>Checkbox</type>
</CustomField>