force-app/main/default/objects/smagicinteract__SMS_Magic_Package_Type__c/fields/smagicinteract__Trial__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Trial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trial</label>
    <type>Checkbox</type>
</CustomField>